--- a/admin_news.html
+++ b/admin_news.html
@@ -129,6 +129,7 @@
 
         <!-- Left Panel -->
         <div class="panel">
+            <img src="./images/custom/sidebar-slice.png" class="panel-bg">
             <a href="/admin.html" class="logo__link">
                 <img src="./images/custom/logo.png" alt="logo" class="logo__img">
                 <p class="logo__text">Admin</p>
@@ -247,7 +248,7 @@
         <div class="personal">
             <div class="portfolio-wrapper">
                 <h2 class="admin__h2">Новости</h2>
-                <div class="portfolio-wrapper__top">
+                <div class="portfolio-wrapper__top crypto_green_btn">
                     <button class="crypto-btn btn-green"><img src="./images/custom/+.png" alt=""></button>
                 </div>
             </div>
@@ -320,7 +321,7 @@
                                 <span class="time-text">2021-02-02    |     01:12:07</span>
                             </td>
                             <td class="history-row-info">
-                                <button class="general-button table-btn btn-orange">Ожидает</button>
+                                <button class="general-button table-btn btn-dark-orange">Ожидает</button>
                             </td>
                             <td class="history-row-info">
                                 <img src="images/Admin/replace.svg" alt="">
