--- a/admin_profile_redact.html
+++ b/admin_profile_redact.html
@@ -129,6 +129,7 @@
 
 		<!-- Left Panel -->
 		<div class="panel">
+			<img src="./images/custom/sidebar-slice.png" class="panel-bg">
 			<a href="/admin.html" class="logo__link">
 				<img src="./images/custom/logo.png" alt="logo" class="logo__img">
 				<p class="logo__text">Admin</p>
@@ -246,7 +247,7 @@
 
 		<div class="personal">
 			<div class="scroll-content">
-				<div class="tarif-choose-1-outer tarif-choose-1-outer1 tarif-choose-1-outer-margin">
+				<div class="tarif-choose-1-outer tarif-choose-1-outer1">
 					<div class="tarif-choose-track">
 						<label class="tarif-choosen-item-wrap tarif__2">
 							<input type="radio" name="tarif">
@@ -349,7 +350,18 @@
 					</div>
 				</div>
 			</div>
-			<h2 class="admin__h2">Редактировать: 44</h2>
+			<div class="title-wrapper">
+				<h2 class="admin__h2">Редактировать: 44</h2>
+				<div class="breadcrumbs">
+					<a href="#">Главная</a>
+					<span>-></span>
+					<a href="#">Invests</a>
+					<span>-></span>
+					<a href="#">44</a>
+					<span>-></span>
+					<a href="#">Редактировать</a>       
+				</div>
+			</div>
 			<div class="admin__input">
 				<p class="input__text">Пользователь *</p>
 				<input placeholder="asdsadasd" type="text" name="">
