--- a/admin_users.html
+++ b/admin_users.html
@@ -129,6 +129,7 @@
 
         <!-- Left Panel -->
         <div class="panel">
+            <img src="./images/custom/sidebar-slice.png" class="panel-bg">
             <a href="/admin.html" class="logo__link">
                 <img src="./images/custom/logo.png" alt="logo" class="logo__img">
                 <p class="logo__text">Admin</p>
@@ -246,7 +247,7 @@
 
         <div class="personal">
             <div class="scroll-content">
-                <div class="tarif-choose-1-outer tarif-choose-1-outer1 tarif-choose-1-outer-margin">
+                <div class="tarif-choose-1-outer tarif-choose-1-outer1">
                     <div class="tarif-choose-track">
                         <label class="tarif-choosen-item-wrap tarif__2">
                             <input type="radio" name="tarif">
