--- a/admin_portfolio.html
+++ b/admin_portfolio.html
@@ -130,6 +130,7 @@
 
         <!-- Left Panel -->
         <div class="panel">
+            <img src="./images/custom/sidebar-slice.png" class="panel-bg">
             <a href="/admin.html" class="logo__link">
                 <img src="./images/custom/logo.png" alt="logo" class="logo__img">
                 <p class="logo__text">Admin</p>
