--- a/admin_settings.html
+++ b/admin_settings.html
@@ -129,6 +129,7 @@
 
         <!-- Left Panel -->
         <div class="panel">
+            <img src="./images/custom/sidebar-slice.png" class="panel-bg">
             <a href="/admin.html" class="logo__link">
                 <img src="./images/custom/logo.png" alt="logo" class="logo__img">
                 <p class="logo__text">Admin</p>
@@ -247,7 +248,7 @@
         <div class="personal">
             <div class="portfolio-wrapper">
                 <h2 class="admin__h2">Параметры</h2>
-                <div class="portfolio-wrapper__top">
+                <div class="portfolio-wrapper__top crypto_green_btn">
                     <button class="crypto-btn btn-green"><img src="./images/custom/+.png" alt=""></button>
                 </div>
             </div>
